# tudocomp

./: .clang-format  .gitignore  .gitmodules  .travis-build-glog.sh  .travis-build.sh  .travis.yml  CMakeLists.txt  COPYING  Doxyfile.in  README.md  TODO.md  compile.sh  compile_debug.sh  genregistry.sh
docs/: CMakeLists.txt  Documentation.md  DocumentationVars.txt  Doxyfile.in  DoxygenLayout.xml  Index.md  doxygen-tudocomp.css  metavars.py  namespaces.hpp  pandoc_template.html  template.tex
docs/content/: build.md  docs-algo-coder.md  docs-algo-compressor.md  docs-algo-generator.md  docs-algo-meta.md  docs-algo-strategy.md  docs-algo.md  docs-bench-corpus.md  docs-bench.md  docs-driver.md  docs-ds-bv-rankselect.md  docs-ds-bv.md  docs-ds-iv.md  docs-ds-textds.md  docs-ds.md  docs-io-bitio.md  docs-io-transform.md  docs-io.md  docs-stats-charter.md  docs-stats.md  docs-test.md  docs-types.md  docs.md  driver.md  impl-lz78.md  impl.md  namespaces.dox  registry.md  start-build-registry.md  start-build-test.md  start-build.md  start-compress.md  start-dev.md  start-library.md  start.md
docs/html/: index.html  style-pandoc.css  style.css
docs/latex/: header.tex  main.tex
docs/media_src/: lz78_trie.odg  project_setup.dia
examples/: CMakeLists.txt  coder_stats.cpp  hashmap.cpp  hashset.cpp  serialization_and_memsize.cpp
examples/bit_vector/: CMakeLists.txt  bit_vector.cpp
src/: CMakeLists.txt  dummy.cpp  lz78_impl.cpp  lzw_impl.cpp  plcp_decomp_main.cpp  plcp_decomp_main2.cpp  plcp_main.cpp  tudocomp.cpp  tudocomp_algorithms.cpp
src/compare_tool/: Cargo.toml  README.md
src/compare_tool/src/: config.rs  main.rs
src/compress_compare/: CMakeLists.txt  Cargo.toml
src/compress_compare/src/: main.rs
src/dummy/: CMakeLists.txt  dummy_compressor.cpp  dummy_compressor.h  dummy_encoder.cpp  dummy_encoder.h
src/esacomp/: CMakeLists.txt  code0.cpp  code0.h  code1.cpp  code1.h  code2.cpp  code2.h  esa_compressor.h  max_heap.h  max_lcp.h  max_lcp_heap.h  max_lcp_sorted_suffix_list.h
src/esacomp_dummy/: CMakeLists.txt  dummy_compressor.h  dummy_encoder.cpp  dummy_encoder.h
src/esacomp_impl/: CMakeLists.txt  max_lcp.h
src/esacomp_lz_factor/: lz_compressor.cpp  lz_compressor.h
src/esacomp_suffix_array_compressor/: CMakeLists.txt  sa_compressor.h
src/esacomprule/: CMakeLists.txt
src/lz77_classic/: lz78_trie.h  lz78rule.h
src/lz77_ss/: CMakeLists.txt
src/lz77rule/: CMakeLists.txt  lz77rule.h  rule.h  rules.h
src/lz78/: CMakeLists.txt  lz78rule_rule.h  lz78rule_rules.h
src/lz78_impl/: lz78.cpp  lz78.h
src/lz78rule/: CMakeLists.txt  lz78_trie.h  lz78rule.h  lz78rule_rule.h  lz78rule_rules.h
src/lz_compressor/: CMakeLists.txt  lz77.cpp  lz77.h  lz78.cpp  lz78.h  lz_compressor.cpp  lz_compressor.h  lzw.cpp  lzw.h
src/lzw/: CMakeLists.txt
src/lzw_impl/: CMakeLists.txt
src/lzw_julius_pettersson/: CMakeLists.txt  Doxyfile  lzw_jp.hpp  lzw_v6.cpp
src/lzwrule/: CMakeLists.txt  lzwrule.h
src/malloc_count/: CMakeLists.txt  malloc_count.cpp  tudostat_module.cpp
src/old/: CMakeLists.txt
src/old/compare_tool/: CMakeLists.txt  Cargo.toml
src/old/esacomp_impl/: code0.h
src/old/esacomp_suffix_array_compressor/: sa_compressor.cpp
src/old/lz78/: lz78_trie.h  lz78rule.h
src/old/lz78_impl/: CMakeLists.txt
src/old/lzw/: lzwrule.h
src/old/lzw_impl/: lzw.cpp  lzw.h
src/old/tudocomp_driver/: tudocomp_algorithms.h
src/plcpcomp_em/: CMakeLists.txt  plcp_decomp_main.cpp  plcp_main.cpp
src/sdsl_extension/: CMakeLists.txt  sdsl_extension.h
src/suffix_array_compressor/: CMakeLists.txt  sa_compressor.cpp  sa_compressor.h
src/test/: CMakeLists.txt  lz78_impl_tests.cpp  lz78_tests.cpp  lz78rule_test_util.h  lzw_impl_tests.cpp  test_driver.cmake  test_driver.cpp  test_util.h  tudocomp_tests.cpp
src/todo/test/: esacomp_suffix_array_compressor_tests.cpp
src/tudocomp/: CMakeLists.txt  bit_iostream.h  global_registry.h  lz78_impl.cpp  lzw_impl.cpp  rule.cpp  rule.h  rules.cpp  rules.h  tudocomp.cpp  tudocomp.h  tudocomp_env.h  tudocomp_io_handle.h  tudocomp_util.h
src/tudocomp_driver/: CMakeLists.txt  commandargs.h  genregistry.sh  global_registry.h  main.cpp  tudocomp_algorithms.cpp  tudocomp_algorithms.h  tudocomp_driver.cpp
src/tudocomp_stat/: CMakeLists.txt  PhaseData.cpp  Stat.cpp  StatPhase.cpp  StatPhaseStxxl.cpp  malloc.cpp
src/tudostat/: CMakeLists.txt
src/util/: CMakeLists.txt  decode_buffer.cpp
test/: .gitignore  CMakeLists.txt  SEA17_paper_tests.cpp  adaphuff_tests.cpp  arithm_tests.cpp  bench_driver.cpp  bit_io_tests.cpp  bit_packed_layout_tests.cpp  cedar_tests.cpp  coder_tests.cpp  coding_prototype_test.cpp  compact_hash_displacement_tests.cpp  compact_hash_elias_displacement_tests.cpp  compact_hash_tests.cpp  compact_hash_tests.template.hpp  compact_hashset_tests.template.hpp  compact_sparse_hash_displacement_tests.cpp  compact_sparse_hash_elias_displacement_tests.cpp  compact_sparse_hash_tests.cpp  compact_sparse_hash_v2_tests.cpp  compact_sparse_hashset_displacement_tests.cpp  compact_sparse_hashset_elias_displacement_tests.cpp  compact_sparse_hashset_serialization_tests.cpp  compact_sparse_hashset_tests.cpp  compressor_adapter_tests.cpp  dev_tests.cpp  doc_snippets.cpp  ds_manager_tests.cpp  ds_tests.cpp  dummy_tests.cpp  esacomp_dummy_tests.cpp  esacomp_lz_factor_tests.cpp  esacomp_tests.cpp  esp_tests.cpp  example_compressor_tests.cpp  example_tests.cpp  generic_int_vector_tests.cpp  huff_test.cpp  input_output_tests.cpp  int_coder_tests.cpp  (+48 more)
test/doc_snippets/: algorithm_impl.cpp  bit_io.cpp  bit_vector.cpp  coder_impl.cpp  compare_example.suite  compare_example2.suite  compressor_impl.cpp  generator_impl.cpp  int_vector.cpp  io.cpp  stats.cpp
test/test/: driver_util.hpp  test_driver.cpp  testsuite.cmake  util.hpp
www/: CMakeLists.txt  index.html  robots.txt  style.css
www/arrays/: index.html
www/charter/: index.html  stat-chart.js  stat-ui.js  style.css
www/dashboard/: index.html
www/fonts/: fonts.css
www/pages/: fame.md  gsoc.md  gsoc_chat.md  ideas.md  impressum.md  pandoc_template.html  text-collection.md
(+848 files in other folders)
